Added ability to download heavy images from Internet by clicking on button, added image-download metric, connected default Send-test to Web-site

--- a/src/Pages/gallery.css
+++ b/src/Pages/gallery.css
@@ -17,3 +17,9 @@ iframe {
     display: block;
     margin: 0 auto;
 }
+
+.gallery-image {
+    margin: 10px auto;
+    width: 100%;
+    border: 2px solid red;
+}
